Fixing cursors overlapping with nav on desktop on mobile (#53)
* Set nav z-index to 101
* Set local cursor only to 102

--- a/components/Nav/Nav.module.css
+++ b/components/Nav/Nav.module.css
@@ -4,7 +4,7 @@
   position: sticky;
   top: 0px;
   bottom: auto;
-  z-index: 1;
+  z-index: 101;
   padding: 1.25rem;
   -webkit-backdrop-filter: saturate(180%) blur(5px);
   backdrop-filter: saturate(180%) blur(5px);
